WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36479
Plug-in clip rect does not update when overflow clip changes
https://bugs.webkit.org/show_bug.cgi?id=36479
Summary
Plug-in clip rect does not update when overflow clip changes
mitz
Reported
2010-03-22 22:53:24 PDT
<
rdar://problem/7197736
> When changes to overflow clip affect a plug-in’s visible rect, but its frame rect doesn’t change, if the plug-in is not in a compositing layer, then it does not get updated to reflect the change to clipping. This is demonstrated by a manual test which is part of a forthcoming patch.
Attachments
Notify views of visible-rect-only changes
(9.92 KB, patch)
2010-03-22 22:55 PDT
,
mitz
sullivan
: review+
Details
Formatted Diff
Diff
Notify views of visible-rect-only changes
(9.92 KB, patch)
2010-03-22 23:05 PDT
,
mitz
sullivan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-03-22 22:55:33 PDT
Created
attachment 51395
[details]
Notify views of visible-rect-only changes
WebKit Review Bot
Comment 2
2010-03-22 23:00:56 PDT
Attachment 51395
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/mac/Plugins/WebBaseNetscapePluginView.h:52: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Seidel (no email)
Comment 3
2010-03-22 23:01:47 PDT
Attachment 51395
[details]
did not build on mac: Build output:
http://webkit-commit-queue.appspot.com/results/981123
mitz
Comment 4
2010-03-22 23:05:42 PDT
Created
attachment 51396
[details]
Notify views of visible-rect-only changes
WebKit Review Bot
Comment 5
2010-03-22 23:06:47 PDT
Attachment 51396
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/mac/Plugins/WebBaseNetscapePluginView.h:52: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 6
2010-03-23 09:06:29 PDT
Comment on
attachment 51396
[details]
Notify views of visible-rect-only changes
> Index: WebCore/manual-tests/plugin-visible-rect-change.html > =================================================================== > --- WebCore/manual-tests/plugin-visible-rect-change.html (revision 0) > +++ WebCore/manual-tests/plugin-visible-rect-change.html (revision 0) > @@ -0,0 +1,25 @@ > +<p> > + This test requires that accelerated compositing be dsiabled
Typo: "dsiabled". I'll review more later.
John Sullivan
Comment 7
2010-03-23 09:41:15 PDT
Oops, I r+'ed the obsolete version.
John Sullivan
Comment 8
2010-03-23 09:44:55 PDT
Comment on
attachment 51396
[details]
Notify views of visible-rect-only changes
> + This test requires that accelerated compositing be dsiabled. Clicking the Test button should completely reveal the black-bordered box. > + The orange video should completely fill the box, with the controller visible and touching the bottom of the box. There should be > + not ba any red visible.
r+ if you fix "dsiabled" and "ba any red".
mitz
Comment 9
2010-03-23 17:28:40 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/56429
> except I forgot to fix the typos in the test :-(
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug