WebCore: WebCore part of <rdar://problem/7197736> Plug-in clip rect does not update when overflow clip changes https://bugs.webkit.org/show_bug.cgi?id=36479.

Reviewed by John Sullivan.

* manual-tests/plugin-visible-rect-change.html: Added.
* platform/mac/WidgetMac.mm:
(WebCore::WidgetPrivate::WidgetPrivate): Added previousVisibleRect.
(WebCore::Widget::setFrameRect): If the visible rect changed but the
frame rect did not, send a -visibleRectDidChange message to the view,
if it responds to it.
(WebCore::Widget::releasePlatformWidget): Reset previousVisibleRect.
* rendering/RenderWidget.cpp:
(WebCore::RenderWidget::setWidgetGeometry): Track changes to the clip rect
imposed by the enclosing layer. Call Widget::setFrameRect when it changes,
even if the frame rect did not.
* rendering/RenderWidget.h:
(WebCore::RenderWidget::windowClipRect): Added this accessor.

WebKit/mac: WebKit part of
<rdar://problem/7197736> Plug-in clip rect does not update when overflow
clip changes
https://bugs.webkit.org/show_bug.cgi?id=36479.

Reviewed by John Sullivan.

* Plugins/Hosted/WebHostedNetscapePluginView.mm:
(-[WebHostedNetscapePluginView visibleRectDidChange]): Added. Calls
WKSyncSurfaceToView().
* Plugins/WebBaseNetscapePluginView.h:
* Plugins/WebBaseNetscapePluginView.mm:
(-[WebBaseNetscapePluginView _windowClipRect]): Changed to use Widget::windowClipRect().
(-[WebBaseNetscapePluginView visibleRectDidChange]): Added. Invokes -renewGState.

WebKitLibraries: WebKitSystemInterface part of
<rdar://problem/7197736> Plug-in clip rect does not update when overflow
clip changes
https://bugs.webkit.org/show_bug.cgi?id=36479.

Reviewed by John Sullivan.

* WebKitSystemInterface.h: Added WKSyncSurfaceToView().
* libWebKitSystemInterfaceSnowLeopard.a: Updated



Canonical link: https://commits.webkit.org/47723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56429 268f45cc-cd09-0410-ab3c-d52691b4dbfc