WebCore/rendering/RenderWidget.h
@@ -40,6 +40,7 @@ public:
 
     void updateWidgetPosition();
     void widgetPositionsUpdated();
+    IntRect windowClipRect() const { return m_windowClipRect; }
 
     void showSubstituteImage(PassRefPtr<Image>);
 
@@ -74,6 +75,7 @@ private:
     RefPtr<Widget> m_widget;
     RefPtr<Image> m_substituteImage;
     FrameView* m_frameView;
+    IntRect m_windowClipRect;
     int m_refCount;
 };
 
