WebKit/mac/Plugins/WebBaseNetscapePluginView.h
@@ -48,6 +48,11 @@ namespace WebCore {
 
 class WebHaltablePlugin;
 
+// Also declared in WebCore/WidgetMac.mm
+@interface NSView (Widget)
+- (void)visibleRectDidChange;
+@end
+
 @interface WebBaseNetscapePluginView : NSView
 {
     RetainPtr<WebNetscapePluginPackage> _pluginPackage;
