WebKitLibraries/WebKitSystemInterface.h
@@ -294,6 +294,7 @@ void WKWindowSetScaledFrame(NSWindow *window, NSRect scaleFrame, NSRect nonScale
 
 #if !defined(BUILDING_ON_TIGER) && !defined(BUILDING_ON_LEOPARD)
 NSMutableArray *WKNoteOpenPanelFiles(NSArray *paths);
+void WKSyncSurfaceToView(NSView *view);
 #endif
 
 #ifdef __cplusplus
